--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,11 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
   <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
-    <div class="logo-container">
-      LOGO
-    </div>
+    <div class="logo-container">LOGO</div>
 
     <ul class="menu-items">
-      <li><mat-icon>fact_check</mat-icon>Dashboard</li>
-      <li><mat-icon>perm_identity</mat-icon>User</li>
+      <li routerLink="/"><mat-icon>fact_check</mat-icon>Dashboard</li>
+      <li routerLink="/user"><mat-icon>perm_identity</mat-icon>User</li>
     </ul>
-
   </mat-drawer>
 
   <div class="example-sidenav-content">
@@ -18,5 +15,8 @@
         <span>Simple CRM</span>
       </mat-toolbar-row>
     </mat-toolbar>
+    <div class="router-container">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </mat-drawer-container>
