--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,5 +1,46 @@
 <h1 mat-dialog-title>Add User</h1>
-<div mat-dialog-content>Hier Nutzer hinzufügen</div>
+<div mat-dialog-content>
+  <div>
+    <mat-form-field class="mr-16" appearance="outline">
+      <mat-label>First Name</mat-label>
+      <input matInput placeholder="Placeholder" />
+      <!-- <mat-hint>Please enter a name</mat-hint> -->
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Last Name</mat-label>
+      <input matInput placeholder="Placeholder" />
+      <!-- <mat-hint>Please enter a name</mat-hint> -->
+    </mat-form-field>
+    <mat-form-field appearance="outline" class="full-width">
+      <mat-label>Birth Date</mat-label>
+      <input matInput placeholder="Placeholder" [matDatepicker]="picker1" />
+      <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+      <mat-datepicker #picker1></mat-datepicker>
+      <!-- <mat-hint>Please enter a date</mat-hint> -->
+    </mat-form-field>
+  </div>
+
+  <div>
+  <mat-form-field appearance="outline" class="full-width">
+    <mat-label>Street + House No.</mat-label>
+    <input matInput placeholder="Placeholder" />
+    <!-- <mat-hint>Please enter a name</mat-hint> -->
+  </mat-form-field>
+  </div>
+  <div>
+  <mat-form-field appearance="outline" class="mr-16">
+    <mat-label>Zip Code</mat-label>
+    <input matInput placeholder="Placeholder" />
+    <!-- <mat-hint>Please enter a name</mat-hint> -->
+  </mat-form-field>
+  <mat-form-field appearance="outline">
+    <mat-label>City</mat-label>
+    <input matInput placeholder="Placeholder" />
+    <!-- <mat-hint>Please enter a name</mat-hint> -->
+  </mat-form-field>
+  </div>
+
+</div>
 <div mat-dialog-actions>
   <button mat-button>Cancel</button>
   <button mat-button cdkFocusInitial>Save</button>
