--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -3,17 +3,17 @@
   <div>
     <mat-form-field class="mr-16" appearance="outline">
       <mat-label>First Name</mat-label>
-      <input matInput placeholder="Placeholder" />
+      <input [(ngModel)]="user.firstName" matInput placeholder="Placeholder" />
       <!-- <mat-hint>Please enter a name</mat-hint> -->
     </mat-form-field>
     <mat-form-field appearance="outline">
       <mat-label>Last Name</mat-label>
-      <input matInput placeholder="Placeholder" />
+      <input [(ngModel)]="user.lastName" matInput placeholder="Placeholder" />
       <!-- <mat-hint>Please enter a name</mat-hint> -->
     </mat-form-field>
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Birth Date</mat-label>
-      <input matInput placeholder="Placeholder" [matDatepicker]="picker1" />
+      <input [(ngModel)]="birthDate" matInput placeholder="Placeholder" [matDatepicker]="picker1" />
       <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
       <mat-datepicker #picker1></mat-datepicker>
       <!-- <mat-hint>Please enter a date</mat-hint> -->
@@ -23,19 +23,19 @@
   <div>
   <mat-form-field appearance="outline" class="full-width">
     <mat-label>Street + House No.</mat-label>
-    <input matInput placeholder="Placeholder" />
+    <input [(ngModel)]="user.street" matInput placeholder="Placeholder" />
     <!-- <mat-hint>Please enter a name</mat-hint> -->
   </mat-form-field>
   </div>
   <div>
   <mat-form-field appearance="outline" class="mr-16">
     <mat-label>Zip Code</mat-label>
-    <input matInput placeholder="Placeholder" />
+    <input [(ngModel)]="user.zipCode" matInput placeholder="Placeholder" />
     <!-- <mat-hint>Please enter a name</mat-hint> -->
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>City</mat-label>
-    <input matInput placeholder="Placeholder" />
+    <input [(ngModel)]="user.city" matInput placeholder="Placeholder" />
     <!-- <mat-hint>Please enter a name</mat-hint> -->
   </mat-form-field>
   </div>
@@ -43,5 +43,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button>Cancel</button>
-  <button mat-button cdkFocusInitial>Save</button>
+  <button mat-button (click)="saveUser()" cdkFocusInitial>Save</button>
 </div>
