--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -3,3 +3,13 @@
   right: 56px;
   bottom: 56px;
 }
+
+.user-table {
+  width: 100%;
+  th {
+    color: rgba(0, 0, 0, 0.4);
+    font-size: 14px;
+    font-weight: 500;
+    text-align: start;
+  }
+}
