--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -10,6 +10,11 @@
       <td>test</td>
       <td>test</td>
     </tr>
+    <tr>
+      <td>test</td>
+      <td>test</td>
+      <td>test</td>
+    </tr>
   </table>
 </mat-card>
 <button
