--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,3 +1,8 @@
+mat-card {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .add-user-btn {
   position: absolute;
   right: 56px;
@@ -6,6 +11,39 @@
 
 .user-table {
   width: 100%;
+  border-collapse: collapse;
+  tr {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+    &:first-child {
+      cursor: unset;
+      &:hover {
+        background-color: unset;
+      }
+    }
+
+    &:last-child {
+      border-bottom: 0;
+    }
+    cursor: pointer;
+    td {
+      height: 48px;
+
+      &:first-child {
+        padding-left: 16px;
+      }
+    }
+
+    th {
+      &:first-child {
+        padding-left: 16px;
+      }
+    }
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.04);
+    }
+  }
+
   th {
     color: rgba(0, 0, 0, 0.4);
     font-size: 14px;
