--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
   <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
-    <div class="logo-container">LOGO</div>
+    <div class="logo-container">
+      <img class="logo" src="assets/img/logo.png" alt="">
+    </div>
 
     <ul class="menu-items">
       <li routerLink="/"><mat-icon>fact_check</mat-icon>Dashboard</li>
