--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -10,7 +10,7 @@
           [disabled]="loading"
           [(ngModel)]="user.firstName"
           matInput
-          placeholder="Placeholder"
+          placeholder="First Name"
         />
         <!-- <mat-hint>Please enter a name</mat-hint> -->
       </mat-form-field>
@@ -20,17 +20,32 @@
           [disabled]="loading"
           [(ngModel)]="user.lastName"
           matInput
-          placeholder="Placeholder"
+          placeholder="Last Name"
         />
         <!-- <mat-hint>Please enter a name</mat-hint> -->
       </mat-form-field>
+    </div>
+
+    <div>
       <mat-form-field appearance="outline" class="full-width">
-        <mat-label>Birth Date</mat-label>
+        <mat-label>E-Mail</mat-label>
+        <input
+          [disabled]="loading"
+          [(ngModel)]="user.email"
+          matInput
+          placeholder="E-Mail"
+        />
+      </mat-form-field>
+    </div>
+
+    <div>
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Birthdate</mat-label>
         <input
           [disabled]="loading"
           [(ngModel)]="birthDate"
           matInput
-          placeholder="Placeholder"
+          placeholder="Birthdate"
           [matDatepicker]="picker1"
         />
         <mat-datepicker-toggle
@@ -49,7 +64,7 @@
           [disabled]="loading"
           [(ngModel)]="user.street"
           matInput
-          placeholder="Placeholder"
+          placeholder="Street Name + House No."
         />
         <!-- <mat-hint>Please enter a name</mat-hint> -->
       </mat-form-field>
@@ -61,7 +76,7 @@
           [disabled]="loading"
           [(ngModel)]="user.zipCode"
           matInput
-          placeholder="Placeholder"
+          placeholder="Zip Code"
         />
         <!-- <mat-hint>Please enter a name</mat-hint> -->
       </mat-form-field>
@@ -71,7 +86,7 @@
           [disabled]="loading"
           [(ngModel)]="user.city"
           matInput
-          placeholder="Placeholder"
+          placeholder="City"
         />
         <!-- <mat-hint>Please enter a name</mat-hint> -->
       </mat-form-field>
