--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,15 +1,19 @@
 <mat-card class="user-detail-header">
   <img src="./assets/img/profile.png" />
   <div class="user-details">
-    <h2>Max Mustermann</h2>
-    email@email.de
+    <h2>{{ user.firstName }} {{ user.lastName }}</h2>
+    {{ user.email }}
   </div>
 </mat-card>
 
 <mat-card class="mt-32">
+  <button mat-icon-button class="pin-right-upper-corner">
+    <mat-icon>more_vert</mat-icon>
+  </button>
+
   <mat-card-title>Address</mat-card-title>
   <mat-card-content>
-    Musterst. 23 <br />
-    12345 Musterstadt
+    {{ user.street }}<br />
+    {{ user.zipCode }} {{ user.city }}
   </mat-card-content>
 </mat-card>
