--- a/src/app/user-detail/user-detail.component.scss
+++ b/src/app/user-detail/user-detail.component.scss
@@ -1,15 +1,15 @@
 .user-detail-header {
   min-height: 250px;
-  background-color:  #ff6723;
+  background-color: #ff6723;
   color: white;
   display: flex;
   align-items: flex-end;
 
   img {
-      height: 100px;
-      width: 100px;
-      object-fit: cover;
-      border-radius: 100%;
+    height: 100px;
+    width: 100px;
+    object-fit: cover;
+    border-radius: 100%;
   }
 }
 
@@ -24,4 +24,10 @@
   h2 {
     margin-bottom: 0;
   }
+}
+
+.pin-right-upper-corner {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
