--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,4 +1,14 @@
 <mat-card class="user-detail-header">
+  <button
+    mat-icon-button
+    [matMenuTriggerFor]="userMenu"
+    class="pin-right-upper-corner"
+  >
+    <mat-icon>more_vert</mat-icon>
+  </button>
+  <mat-menu #userMenu="matMenu">
+    <button mat-menu-item (click)="editUserDetail()">Edit</button>
+  </mat-menu>
   <img src="./assets/img/profile.png" />
   <div class="user-details">
     <h2>{{ user.firstName }} {{ user.lastName }}</h2>
@@ -7,7 +17,14 @@
 </mat-card>
 
 <mat-card class="mt-32">
-  <button mat-icon-button class="pin-right-upper-corner">
+  <button
+    mat-icon-button
+    [matMenuTriggerFor]="addressMenu"
+    class="pin-right-upper-corner"
+  >
+    <mat-menu #addressMenu="matMenu">
+      <button mat-menu-item (click)="editMenu()">Edit</button>
+    </mat-menu>
     <mat-icon>more_vert</mat-icon>
   </button>
 
