--- a/src/app/dialog-edit-user/dialog-edit-user.component.html
+++ b/src/app/dialog-edit-user/dialog-edit-user.component.html
@@ -1,1 +1,46 @@
-<p>dialog-edit-user works!</p>
+<div class="dialog-container">
+  <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+  
+  <h1 mat-dialog-title>Edit address</h1>
+  <div mat-dialog-content>
+
+      <div>
+          <mat-form-field class="mr-16" appearance="outline">
+              <mat-label>First Name</mat-label>
+              <input [disabled]="loading" [(ngModel)]="user.firstName" matInput placeholder="First">
+              <!-- <mat-hint>Please enter a name</mat-hint> -->
+          </mat-form-field>
+  
+          <mat-form-field appearance="outline">
+              <mat-label>Last Name</mat-label>
+              <input [disabled]="loading" [(ngModel)]="user.lastName" matInput placeholder="Last Name">
+              <!-- <mat-hint>Please enter a name</mat-hint> -->
+          </mat-form-field>
+      </div>
+  
+      <div>
+          <mat-form-field appearance="outline" class="full-width">
+              <mat-label>E-Mail</mat-label>
+              <input [disabled]="loading" [(ngModel)]="user.email" matInput placeholder="E-Mail">
+          </mat-form-field>
+      </div>
+  
+  
+      <div>
+          <mat-form-field appearance="outline" class="full-width">
+              <mat-label>Birth Date</mat-label>
+              <input [disabled]="loading" [(ngModel)]="birthDate" matInput placeholder="Placeholder" [matDatepicker]="picker1">
+              <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+              <mat-datepicker #picker1></mat-datepicker>
+              <!-- <mat-hint>Please enter a date</mat-hint> -->
+          </mat-form-field>
+      </div>
+  
+
+
+  </div>
+  <div mat-dialog-actions>
+      <button [disabled]="loading" mat-button (click)="dialogRef.close()">Cancel</button>
+      <button [disabled]="loading" mat-button (click)="saveUser()" cdkFocusInitial>Save</button>
+  </div>
+  </div>
