--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
   <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
     <div class="logo-container">
-      <img class="logo" src="assets/img/logo.png" alt="">
+      <img class="logo" src="assets/img/logo.png" alt="" />
     </div>
 
     <ul class="menu-items">
